Added Google Font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Discourse Bar V2</title>  
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 <header class="b-header clearfix">
